--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
   },
   "devDependencies": {
     "browserify": "^8.1.0",
-    "gulp": "^3.8.10",
+    "gulp": "^3.8.11",
     "gulp-autoprefixer": "^2.0.0",
     "gulp-concat": "^2.4.3",
     "gulp-connect": "^2.2.0",
+    "gulp-imagemin": "^2.2.1",
     "gulp-jshint": "^1.9.1",
     "gulp-less": "^2.0.1",
     "gulp-sourcemaps": "^1.3.0",
+    "gulp-spritesmith": "0.0.2",
     "gulp-uglify": "^1.0.2",
     "gulp-util": "^3.0.2",
+    "spritesmith-texturepacker": "^1.0.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.0.0"
   }
